# ci-LibA

./: CMakeLists.txt  Jenkinsfile  LICENSE  README  build.py  conanfile.py
.github/workflows/: ci_workflow.yml
include/testproject/: libA.h
src/testproject/: libA.cpp
tests/: CMakeLists.txt  simple.cpp  test_main.cpp
